[package]
name = "obfus"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/DoumanAsh/obfus"
readme = "README.md"
description = "Obfuscation utilities"
keywords = ["obfuscation"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies.aes-gcm]
version = "0.11.0-rc.1"
default-features = false
features = ["aes"]

[dependencies.pbkdf2]
version = "0.13.0-rc.1"
default-features = false
